tests/harness/errors/139_list_index_oob.eu
# nth on a list beyond its length
result: [1, 2, 3] nth(10)
